--- a/config/database.yml
+++ b/config/database.yml
@@ -9,14 +9,15 @@
 # And be sure to use new-style password hashing:
 #   http://dev.mysql.com/doc/refman/5.0/en/old-client.html
 development:
-  adapter: mysql2
+  adapter: sqlite3
   encoding: utf8
-  database: todo_list_development
+  #database: todo_list_development
+  database: db/development.sqlite3
   pool: 5
   username: root
   password:
-  port: 3306
-  socket: /tmp/mysql.sock
+  #port: 3306
+  #socket: /tmp/mysql.sock
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
